--- a/docker-1/01_dockerfiles/ex02/Dockerfile
+++ b/docker-1/01_dockerfiles/ex02/Dockerfile
@@ -1,4 +1,3 @@
-FROM ruby
-
-RUN apt update -y && apt upgrade -y
-COPY app /opt/app
+FROM ft-rails:on-build
+EXPOSE 3000
+CMD ["rails", "s", "-b", "0.0.0.0", "-p", "3000"]
