--- a/docker-1/01_dockerfiles/ex03/Dockerfile
+++ b/docker-1/01_dockerfiles/ex03/Dockerfile
@@ -2,11 +2,14 @@ FROM ubuntu
 RUN apt-get -y update 
 RUN apt-get -y upgrade
 RUN apt-get install -y curl openssh-server ca-certificates   
-RUN apt-get install -y postfix
+# RUN apt-get install -y postfix
 RUN curl -LO https://packages.gitlab.com/install/repositories/gitlab/gitlab-ce/script.deb.sh 
-RUN sh /tmp/script.deb.sh
-RUN apt-get install gitlab-ce
-RUN ufw allow http
-RUN ufw allow https
-RUN ufw allow OpenSSH
-
+RUN bash script.deb.sh
+RUN apt-get install -y gitlab-ce
+RUN apt install -y tzdata
+EXPOSE 80 22 443
+# RUN apt-get install ufw -y
+# RUN --priveleged ufw allow http
+#RUN su - && ufw allow https
+#RUN su - && ufw allow OpenSSH
+ENTRYPOINT (/opt/gitlab/embedded/bin/runsvdir-start &) && gitlab-ctl reconfigure && /bin/bash
